ran into a problem where it wouldn't let me add more than 3 questions, kept saying unexpected identifier even though everything was identical

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,11 @@ p {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+button {
+	float: middle;
+}
+#subwrapper {
+	background-color: pink;
+	opacity: .90;
+}
